Delivery Datetime passing through derlivery order form fixed. Delivery order check on ready added. Delivery order now can be made not ready. Delivery controles moved to dotted collapsible menu. Collapse state indicator for delivery moved to the left.

--- a/python3-shawarma/shaw_queue/static/queue/style.css
+++ b/python3-shawarma/shaw_queue/static/queue/style.css
@@ -133,8 +133,9 @@ ul {
   content: '\02795'; /* Unicode character for "plus" sign (+) */
   font-size: 13px;
   color: white;
-  float: right;
-  margin-left: 5px;
+  float: left;
+  margin-right: 5px;
+  margin-top: 2px;
 }
 
 .collapsible-active:before {
